--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 # Get latest from https://github.com/github/gitignore/blob/main/Unity.gitignore
 #
 /Vaporware/[Ll]ibrary/
+/Vaporware/[Tt]emp/
 /[Oo]bj/
 /[Bb]uild/
 /[Bb]uilds/
